<resources>
    <string name="error_INTERNAL_SERVER_ERROR">internal server error!</string>
    <string name="error_NOT_FOUND">not found url!</string>
    <string name="error_CONFIG_ERROR">config error!</string>
    <string name="error_PARAM_ERROR">param error!</string>
    <string name="error_DB_VALIDATE_ERROR">param error!</string>

    <string name="invoke_success">invoke success.</string>
    <string name="invoke_error">invoke error!</string>
    <string name="response_error">response error!</string>
    <string name="internet_auth_not_granted">Please check your internet authority!</string>
    <string name="invoke_timeout">invoke timeout, please wait!</string>
    <string name="invoke_no_route_to_host">no route to host, please wait!</string>
    <string name="invoke_no_more_data">No more data!</string>
    <string name="not_implemented">Please wait for surprise!</string>
    <string name="not_empty">can not empty!</string>
    <string name="can_not_use_storage">Please check your storage read/write authority!</string>
    <string name="can_not_locate">Please check your locate authority!</string>

    <string name="app_name">LichKin</string>
    <string name="title_navigation_menu_home">Home</string>
    <string name="title_navigation_menu_my">My</string>
    <string name="title_navigation_menu_1">Menu1</string>
    <string name="title_navigation_menu_2">Menu2</string>
    <string name="title_navigation_menu_3">Menu3</string>

    <string name="dlg_tip_title">Tip</string>
    <string name="btn_positive_name">OK</string>
    <string name="btn_positive_name_submit">Submit</string>
    <string name="btn_negative_name">Cancel</string>

    <string name="get_last_app_version_invoke_error">invoke error, please check you internet authority.</string>
    <string name="dlg_tip_title_update">New release to update!</string>
    <string name="btn_positive_name_update">Get</string>

    <string name="title_about_us">About US</string>
    <string name="title_version_info">Version Info</string>
    <string name="title_copyright">Copyright</string>
    <string name="title_licensing">Licensing</string>
    <string name="title_service_agreement">Service Agreement</string>
    <string name="title_privacy_right_policy">Privacy Right Policy</string>
    <string name="title_instruction">Instruction</string>

    <string name="title_score">score</string>
    <string name="score_title_text">Title:</string>
    <string name="score_title_hint">Title&#8230;</string>
    <string name="score_content_text">Content:</string>
    <string name="score_content_hint">Content&#8230;</string>
    <string name="score_result">Thanks for your comments</string>

    <string name="title_feedback">feedback</string>
    <string name="feedback_content_text">Content:</string>
    <string name="feedback_content_hint">Content&#8230;</string>
    <string name="feedback_image_text">Select a Picture:</string>
    <string name="feedback_result">Thanks for your comments</string>

    <string name="photo_choose_title">How to choose picture</string>
    <string name="btn_positive_name_gallery">From Gallery</string>
    <string name="btn_negative_name_camera">Take a photo</string>

    <string name="title_about">about</string>
    <string name="title_exit">exit account</string>

    <string name="title_security_center">security center</string>

    <string name="btn_login">Login</string>
    <string name="no_loginName">Not logined yet</string>
    <string name="level_tip">Your Level</string>
    <string name="title_fast_login">Fast Login/Register:</string>
    <string name="btn_title_fast_login">Fast Login/Register&#160;&gt;</string>
    <string name="title_login">Account Login:</string>
    <string name="btn_title_login">Account Login&#160;&gt;</string>
    <string name="login_cellphone_hint">Please enter your cellphone</string>
    <string name="login_btn_next">Next&#160;&#160;&gt;</string>
    <string name="title_login_service_agreement">Login/Register as agreed the&#160;</string>
    <string name="sms_sended">SMS sended to</string>
    <string name="sms_resend">Resend&#160;&#160;&gt;</string>
    <string name="login_sms_hint">Please enter security code</string>
    <string name="register_loginName_hint">Please enter loginName</string>
    <string name="login_loginName_hint">Please enter loginName/cellphone</string>
    <string name="register_loginName_text">User names can be made up of letters and Numbers</string>
    <string name="register_loginName_text2">Note: there is only one setup opportunity</string>
    <string name="pwd_hint">Please enter password</string>
    <string name="register_pwd_text">Passwords can be made up of letters, numbers, symbols.</string>
    <string name="level">Level</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_success">Sign in Success</string>

    <string name="title_btn_comp_news">News</string>
    <string name="title_btn_approval">Workflow</string>
    <string name="title_btn_punch_the_clock">Punch The Clock</string>

    <string name="invoke_punch_the_clock_wait">get accuracy limit in %s need some times, please wait for a moment.</string>
    <string name="invoke_punch_the_clock_success">Invoke Punch The Clock Success</string>
    <string name="invoke_punch_the_clock_failed">Invoke Punch The Clock Failed</string>
</resources>
