<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/settings_container">

    <LinearLayout style="@style/settings_container_out">

        <LinearLayout style="@style/settings_container_in_single">

            <TextView
                android:id="@+id/version_info"
                style="@style/settings_text"
                android:text="@string/title_version_info" />

            <ImageView style="@style/settings_image_arrow_right" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/settings_container_out">

        <LinearLayout style="@style/settings_container_in_single">

            <TextView
                android:id="@+id/about_us"
                style="@style/settings_text"
                android:text="@string/title_about_us" />

            <ImageView style="@style/settings_image_arrow_right" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/settings_container_out">

        <LinearLayout style="@style/settings_container_in_top">

            <TextView
                android:id="@+id/copyright"
                style="@style/settings_text"
                android:text="@string/title_copyright" />

            <ImageView style="@style/settings_image_arrow_right" />

        </LinearLayout>

        <View style="@style/settings_splitor_line" />

        <LinearLayout style="@style/settings_container_in_middle">

            <TextView
                android:id="@+id/licensing"
                style="@style/settings_text"
                android:text="@string/title_licensing" />

            <ImageView style="@style/settings_image_arrow_right" />

        </LinearLayout>

        <View style="@style/settings_splitor_line" />

        <LinearLayout style="@style/settings_container_in_middle">

            <TextView
                android:id="@+id/service_agreement"
                style="@style/settings_text"
                android:text="@string/title_service_agreement" />

            <ImageView style="@style/settings_image_arrow_right" />

        </LinearLayout>

        <View style="@style/settings_splitor_line" />

        <LinearLayout style="@style/settings_container_in_bottom">

            <TextView
                android:id="@+id/privacy_right_policy"
                style="@style/settings_text"
                android:text="@string/title_privacy_right_policy" />

            <ImageView style="@style/settings_image_arrow_right" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/settings_container_out">

        <LinearLayout style="@style/settings_container_in_single">

            <TextView
                android:id="@+id/instruction"
                style="@style/settings_text"
                android:text="@string/title_instruction" />

            <ImageView style="@style/settings_image_arrow_right" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
