<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/form_container_out">

    <LinearLayout style="@style/form_container_in">

        <LinearLayout
            style="@style/input_container"
            android:gravity="center_vertical|center_horizontal">

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="40dp"
                android:minHeight="40dp"
                android:numStars="5"
                android:rating="5"
                android:stepSize="1" />

        </LinearLayout>

        <LinearLayout style="@style/input_container">

            <TextView
                style="@style/input_text"
                android:text="@string/score_title_text" />

            <EditText
                android:id="@+id/title"
                style="@style/input_input"
                android:hint="@string/score_title_hint"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout style="@style/input_container">

            <TextView
                style="@style/input_text"
                android:text="@string/score_content_text" />

            <EditText
                android:id="@+id/content"
                style="@style/input_input"
                android:hint="@string/score_content_hint"
                android:inputType="text" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/form_button_container">

        <Button
            android:id="@+id/btn"
            style="@style/button_button"
            android:text="@string/btn_positive_name_submit" />

    </LinearLayout>

</RelativeLayout>
