<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/my"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/my_bg"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/btn_login"
            style="@style/button_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login" />

        <LinearLayout
            android:id="@+id/logined"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/no_photo"
                android:contentDescription="@string/photo_choose_title" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/loginName"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/level"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:orientation="horizontal">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btn_signIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/sign_in"
                    android:contentDescription="@string/sign_in" />

                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/loading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:indicatorColor="#FFFFFF"
                    app:indicatorName="BallScaleRippleMultipleIndicator" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingTop="10dp" />

</LinearLayout>