<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#EBEBEB"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/my"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="18dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/btn_login"
            style="@style/button_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login" />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/logined"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/no_photo" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="4"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/loginName"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textColor="#383838"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/level"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:orientation="horizontal">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btn_signIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/sign_in" />

                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/loading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:indicatorColor="#FFFFFF"
                    app:indicatorName="BallScaleRippleMultipleIndicator" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_score"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:layout_marginTop="18dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="match_parent"
                android:background="@drawable/btn_score" />

            <TextView
                android:gravity="center"
                android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:textSize="14sp" android:textColor="#373837"
                android:text="@string/title_score" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="10dp" android:paddingRight="10dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1px" android:background="#66888888" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_feedback"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="match_parent"
                android:background="@drawable/btn_feedback" />

            <TextView
                android:gravity="center"
                android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:textSize="14sp" android:textColor="#373837"
                android:text="@string/title_feedback" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="10dp" android:paddingRight="10dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1px" android:background="#66888888" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="match_parent"
                android:background="@drawable/btn_about" />

            <TextView
                android:gravity="center"
                android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:textSize="14sp" android:textColor="#373837"
                android:text="@string/title_about" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/logined_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="18dp">

    <LinearLayout
        android:id="@+id/btn_security_center"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="match_parent"
                android:background="@drawable/btn_security_center" />

            <TextView
                android:gravity="center"
                android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:textSize="14sp" android:textColor="#373837"
                android:text="@string/title_security_center" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="10dp" android:paddingRight="10dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1px" android:background="#66888888" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="match_parent"
                android:background="@drawable/btn_exit" />

            <TextView
                android:gravity="center"
                android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:textSize="14sp" android:textColor="#373837"
                android:text="@string/title_exit" />

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>

</LinearLayout>